tests/ui/const-generics/occurs-check/unify-n-nplusone.stderr
error[E0308]: mismatched types
  --> $DIR/unify-n-nplusone.rs:14:11
   |
LL | fn bind<const N: usize>(value: [u8; N]) -> [u8; N + 1] {
   |                                            ----------- help: consider changing bind's return type: `[u8; _]`
...
LL |     arr = bind(arr);
   |           ^^^^^^^^^ encountered a self-referencing constant
   |
note: the function bind is defined here
  --> $DIR/unify-n-nplusone.rs:6:1
   |
LL | fn bind<const N: usize>(value: [u8; N]) -> [u8; N + 1] {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
